--- a/desafio_modulo03/style.css
+++ b/desafio_modulo03/style.css
@@ -1,5 +1,16 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+/* font-family: "Passion One", sans-serif;*/
+
+@import url('https://fonts.googleapis.com/css2?family=Itim&family=Passion+One:wght@400;700;900&display=swap');
+/* font-family: "Itim", cursive; */
+
+:root {
+    --fonte1:"Passion One", sans-serif;
+    --fonte2:"Itim", cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -8,6 +19,7 @@
 body,html  {
     background-color: darkgrey;
     min-height: 100vh;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 
@@ -18,6 +30,8 @@ body,html  {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps ;
+    font-family: var(--fonte1);
+    font-size: 10vw;
 }
 header > p {
     padding-bottom: 50px;
@@ -44,22 +58,45 @@ header {
 section {
     padding-top: 10vh;
     padding-bottom: 10vh;
-    line-height: 2em;
+    line-height: 1em;
     padding-left: 5vh;
+    font-family: var(--fonte2);
+    font-size: 4vh;
 }
 .normal {
     background-color: white;
 
 }
-.transparente {
+.transparente{
     background-color: rgba(65, 64, 64, 0.555);
+    box-shadow: inset 6px 6px 13px 0px rgba(41, 40, 40, 0.671);
+    
 }
-.letrabranca {
-    color: white;
-    background-color: rgba(0, 0, 0, 0.26);
-    width: 400px;
 
- 
+#um {
+    background-image: url(imagens/background001.jpg);
+    background-size: cover;
+    background-position: 80% 70%;
+    background-attachment: fixed;
+}
+#dois {
+    background-image: url(imagens/background002.jpg);
+    background-position: center right;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+section > p {
+    padding-bottom: 2em;
+}
+
+.letrabranca {
+    text-shadow: 1px 1px 2px black;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.596);
+    width: 50vw;
+    max-width: 450px;
+    padding: 6px;
 }
 
 article {
